Ajout de la gestion des images : configuration du répertoire de stockage, création d'un service d'image, et refactorisation des contrôleurs et services pour utiliser l'authentification de l'utilisateur courant.