@@ -1,19 +1,23 @@
 package com.chatop.services;
 
 import com.chatop.dtos.RentalDto;
+import com.chatop.dtos.RentalRequestDto;
+import com.chatop.mappers.RentalMapper;
 import com.chatop.models.Rental;
 import com.chatop.models.User;
 import com.chatop.repositories.RentalRepository;
 import com.chatop.repositories.UserRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.math.BigDecimal;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -24,8 +28,9 @@ public class RentalService {
 
     private final RentalRepository rentalRepository;
     private final UserRepository userRepository;
-    private final DateTimeFormatter DATE_FORMAT = DateTimeFormatter.ofPattern("yyyy/MM/dd");
-    private final String imagesDir = "C:\\Users\\david\\Desktop\\OCR\\Projet 3 bis\\Developpez-le-back-end-en-utilisant-Java-et-Spring\\Chatop\\src\\main\\resources\\static\\images";
+
+    @Value("${app.images.directory:src/main/resources/static/images}")
+    private String imagesDir;
 
     public RentalService(RentalRepository rentalRepository, UserRepository userRepository) {
         this.rentalRepository = rentalRepository;
@@ -33,67 +38,56 @@ public class RentalService {
     }
 
     public List<RentalDto> getAllRentals() {
-        List<Rental> rentals = rentalRepository.findAll();
-        return rentals.stream().map(this::toDto).collect(Collectors.toList());
+        return rentalRepository.findAll().stream()
+                .map(RentalMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     public Optional<RentalDto> getRentalById(Integer id) {
-        return rentalRepository.findById(id).map(this::toDto);
+        return rentalRepository.findById(id).map(RentalMapper::toDto);
     }
 
-    public RentalDto createRental(String name, Double surface, Double price,
-                                   MultipartFile picture, String description, String userEmail) throws IOException {
-        User owner = userRepository.findByEmail(userEmail);
-        if (owner == null) {
-            throw new IllegalArgumentException("User not found");
+    public RentalDto createRental(RentalRequestDto rentalRequest) throws IOException {
+        User owner = getCurrentUser();
+        Rental rental = RentalMapper.toEntity(rentalRequest, owner);
+
+        if (rentalRequest.getPicture() != null && !rentalRequest.getPicture().isEmpty()) {
+            rental.setPicture(savePicture(rentalRequest.getPicture()));
         }
 
-        Rental rental = new Rental();
-        rental.setName(name);
-        rental.setSurface(surface != null ? BigDecimal.valueOf(surface) : null);
-        rental.setPrice(price != null ? BigDecimal.valueOf(price) : null);
-        rental.setDescription(description);
-        rental.setOwner(owner);
-
-        if (picture != null && !picture.isEmpty()) {
-            String filename = savePicture(picture);
-            rental.setPicture(filename);
-        }
-
-        Rental saved = rentalRepository.save(rental);
-        return toDto(saved);
+        return RentalMapper.toDto(rentalRepository.save(rental));
     }
 
-    public RentalDto updateRental(Integer id, String name, Double surface, Double price,
-                                   MultipartFile picture, String description, String userEmail) throws IOException {
-        User currentUser = userRepository.findByEmail(userEmail);
-        if (currentUser == null) {
-            throw new IllegalArgumentException("User not found");
-        }
-
-        Rental rental = rentalRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Rental not found"));
+    public RentalDto updateRental(Integer id, RentalRequestDto rentalRequest) throws IOException {
+        User currentUser = getCurrentUser();
+        Rental rental = rentalRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("Rental not found"));
 
         if (rental.getOwner() == null || !rental.getOwner().getId().equals(currentUser.getId())) {
             throw new SecurityException("You are not authorized to update this rental");
         }
 
-        rental.setName(name);
-        rental.setSurface(surface != null ? BigDecimal.valueOf(surface) : null);
-        rental.setPrice(price != null ? BigDecimal.valueOf(price) : null);
-        rental.setDescription(description);
+        RentalMapper.updateEntity(rental, rentalRequest);
 
-        if (picture != null && !picture.isEmpty()) {
-            String filename = savePicture(picture);
-            rental.setPicture(filename);
+        if (rentalRequest.getPicture() != null && !rentalRequest.getPicture().isEmpty()) {
+            rental.setPicture(savePicture(rentalRequest.getPicture()));
         }
 
-        rentalRepository.save(rental);
-        return toDto(rental);
+        return RentalMapper.toDto(rentalRepository.save(rental));
+    }
+
+    private User getCurrentUser() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = userRepository.findByEmail(authentication.getName());
+        if (user == null) {
+            throw new IllegalArgumentException("User not found");
+        }
+        return user;
     }
 
     private String savePicture(MultipartFile picture) throws IOException {
-        Path imagesPath = Path.of(imagesDir).toAbsolutePath().normalize();
+        // Construit le chemin complet depuis le répertoire de travail
+        Path imagesPath = Paths.get(System.getProperty("user.dir")).resolve(imagesDir);
+
         if (!Files.exists(imagesPath)) {
             Files.createDirectories(imagesPath);
         }
@@ -109,26 +103,6 @@ public class RentalService {
         Files.copy(picture.getInputStream(), target, StandardCopyOption.REPLACE_EXISTING);
 
         return filename;
-    }
-
-    private RentalDto toDto(Rental rental) {
-        RentalDto dto = new RentalDto();
-        dto.setId(rental.getId());
-        dto.setName(rental.getName());
-        dto.setSurface(rental.getSurface() != null ? rental.getSurface().doubleValue() : null);
-        dto.setPrice(rental.getPrice() != null ? rental.getPrice().doubleValue() : null);
-
-        if (rental.getPicture() != null && !rental.getPicture().isEmpty()) {
-            dto.setPicture("http://localhost:8080/images/" + rental.getPicture());
-        } else {
-            dto.setPicture(rental.getPicture());
-        }
-
-        dto.setDescription(rental.getDescription());
-        dto.setOwnerId(rental.getOwner() != null ? rental.getOwner().getId() : null);
-        dto.setCreatedAt(rental.getCreatedAt() != null ? rental.getCreatedAt().format(DATE_FORMAT) : null);
-        dto.setUpdatedAt(rental.getUpdatedAt() != null ? rental.getUpdatedAt().format(DATE_FORMAT) : null);
-        return dto;
     }
 }
 
